# mockdata-backend

./: .env  .gitignore  Cargo.toml
libs/fakedata/: Cargo.toml
libs/fakedata/src/: constants.rs  data_generator.rs  data_processor.rs  lib.rs
libs/mockdata_ddl/: Cargo.toml
libs/mockdata_ddl/src/: data_processor.rs  ddl_parser.rs  lib.rs  postgres_ddl.rs  postgres_enums.rs
libs/mockdata_ddl/src/json/: datatypes.json
libs/mockdata_ddl/src/sql/: postgres_create_ddl_function.sql  postgres_drop_ddl_function.sql  postgres_get_enums.sql
migrations/2020-06-05-064359_create_projects/: up.sql
migrations/2020-06-10-130607_create_projects_table/: down.sql  up.sql
migrations/2020-06-10-131314_create_projects_table_fields/: down.sql  up.sql
migrations/2020-06-14-125330_add_type_to_project/: down.sql  up.sql
migrations/2020-06-14-185155_add_schema_to_projects/: down.sql  up.sql
migrations/2020-06-15-200541_add_fields_to_project_field/: down.sql  up.sql
migrations/2020-06-18-143429_add_enum_values_to_table_field/: down.sql  up.sql
migrations/2020-06-19-152952_add_count_to_project_tables/: down.sql  up.sql
migrations/2020-07-22-222258_update_project_table_table/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/filters/: project.rs
src/handlers/: project.rs
src/services/: introspect.rs  mod.rs
