[package]
name = "fakedata"
version = "0.1.0"
authors = ["Anton Pokhylenko <anton.pokhilenko@gmail.com>"]
edition = "2018"

[lib]
name = "fakedata"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
anyhow = "1.0.31"
fake = { version = "2.2", features=['chrono']}
regex = "1"
rand = "0.7.3"
cuid = "1.0.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
